# drf-auth

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
a_project/: asgi.py  settings.py  urls.py  wsgi.py
a_users/: admin.py  apps.py  models.py  tests.py
a_users/migrations/: 0001_initial.py
recipe/: admin.py  models.py  permissions.py  tests.py  urls.py  views.py
recipe/migrations/: 0001_initial.py
